# passlane

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  TODO.md  build.rs  copy_schema.sh  default.nix  flake.nix  genpass.sh  passlane.sh  passwords.csv  test.csv
.cargo/: config.toml
.claude/skills/passlane/: SKILL.md
.claude/skills/passlane-release/: SKILL.md
.claude/skills/passlane/references/: automation-examples.md
.github/workflows/: ci.yml  release.yml
.pi/: settings.local.json
docs/: security-audit-2026-07-19.md
docs/features/: json-output-and-list-command.md
openspec/changes/add-credential-notes/: tasks.md
openspec/changes/add-credential-notes/specs/list-command/: spec.md
openspec/changes/archive/2026-02-08-add-credential-notes/: design.md  proposal.md
openspec/changes/archive/2026-02-08-add-credential-notes/specs/credential-notes/: spec.md
openspec/changes/archive/2026-02-08-clipboard-timeout/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-08-fix-master-password-prompt/: tasks.md
openspec/changes/archive/2026-02-08-json-output-and-list-command/: design.md  tasks.md
openspec/changes/archive/2026-02-08-repl-mode/: design.md  proposal.md
openspec/changes/archive/2026-02-08-show-card-last4-digits/: design.md  proposal.md  tasks.md
openspec/changes/clipboard-timeout/: tasks.md
openspec/changes/clipboard-timeout/specs/clipboard-timeout/: spec.md
openspec/changes/fix-master-password-prompt/: design.md  proposal.md
openspec/changes/fix-master-password-prompt/specs/password-prompting/: spec.md
openspec/changes/json-output-and-list-command/: proposal.md  tasks.md
openspec/changes/json-output-and-list-command/specs/list-command/: spec.md
openspec/changes/repl-mode/: tasks.md
openspec/changes/repl-mode/specs/repl-session/: spec.md
openspec/changes/scriptable-otp-codes/: design.md  proposal.md  tasks.md
openspec/changes/scriptable-otp-codes/specs/list-command/: spec.md
openspec/changes/scriptable-otp-codes/specs/scriptable-otp-codes/: spec.md
openspec/changes/shell-completion/: design.md  proposal.md  tasks.md
openspec/changes/shell-completion/specs/completion-cache/: spec.md
openspec/changes/shell-completion/specs/repl-session/: spec.md
openspec/changes/shell-completion/specs/shell-completion/: spec.md
openspec/changes/show-card-last4-digits/specs/list-command/: spec.md
openspec/specs/clipboard-timeout/: spec.md
openspec/specs/credential-notes/: spec.md
openspec/specs/list-command/: spec.md
openspec/specs/password-prompting/: spec.md
resources/: auth_success.html
src/: actions.rs  auth.rs  completion_cache.rs  credentials.rs  crypto.rs  graphql.rs  keychain.rs  main.rs  online_vault.rs  password.rs  schema.graphql  store.rs  ui.rs  vault.rs
src/actions/: add.rs  change_password.rs  completions.rs  delete.rs  edit.rs  export.rs  generate.rs  help.rs  import.rs  init.rs  list.rs  lock.rs  mod.rs  show.rs  unlock.rs
src/graphql/: queries.rs
src/repl/: commands.rs  completer.rs  help.rs  mod.rs
src/ui/: input.rs  mod.rs  output.rs
src/vault/: entities.rs  keepass_vault.rs  mod.rs  vault_trait.rs
