[package]
name = "passlane"
version = "2.2.2"
edition = "2021"
authors = ["Anssi Piirainen <anssip@email.com>"]
license = "GPL-3.0-or-later"
description = "A password manager for the command line with online storage and multi-device access"
readme = "README.md"
homepage = "https://github.com/anssip/passlane"
repository = "https://github.com/anssip/passlane"
keywords = ["cli", "password", "credentials"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
clipboard = "0.5.0"
clap = "4.1.4"
csv = "1.1.6"
serde = { version = "1.0.137", features = ["derive"] }
magic-crypt = "3.1.10"
dirs = "5.0.1"
pwhash = "1.0.0"
regex = "1.5.5"
rpassword = "7.2.0"
comfy-table = "7.0.1"
oauth2 = "4.2.3"
tokio = { version = "1.17.0", features = ["full"] }
hyper = { version = "0.14.18", features = ["server", "http1"] }
serde_urlencoded = "0.7.1"
futures = "0.3.21"
tower-service = "0.3.1"
log = "0.4.16"
anyhow = "1.0.56"
webbrowser = "0.8.10"
reqwest = "0.11.11"
cynic = { version = "1.0.0", features = ["reqwest"] }
chrono = "0.4.19"
env_logger = "0.10.0"
serde_json = "1.0.83"
hex = "0.4.3"
async-trait = "0.1.58"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
base64 = "0.21.2"
