[package]
name = "passlane"
version = "2.5.1"
edition = "2021"
authors = ["Anssi Piirainen <anssip@email.com>"]
license = "GPL-3.0-or-later"
description = "A password manager and authenticator for the command line"
readme = "README.md"
homepage = "https://github.com/anssip/passlane"
repository = "https://github.com/anssip/passlane"
keywords = [
    "keepass",
    "password-manager",
    "password-generator",
    "totp",
    "authenticator",
]
categories = ["command-line-utilities"]

[dependencies]
rand = "0.8.5"
clipboard = "0.5.0"
clap = "4.5.4"
csv = "1.3.0"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
erased-serde = "0.3"
magic-crypt = "3.1.10"
dirs = "5.0.1"
regex = "1.5.5"
comfy-table = "7.0.1"
serde_urlencoded = "0.7.1"
log = "0.4.16"
anyhow = "1.0.56"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.10.0"
hex = "0.4.3"
keepass-ng = { version = "0.9.0", features = ["save_kdbx4", "totp"] }
keyring = "2.3.2"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
percent-encoding = "2.3.1"
rustyline-derive = "0.10.0"
rustyline = "14.0.0"
inquire = "0.7.5"